RESOLVED FIXED270001
[iOS] Element fullscreen window should not support pinch-to-dismiss
https://bugs.webkit.org/show_bug.cgi?id=270001
Summary [iOS] Element fullscreen window should not support pinch-to-dismiss
Andy Estes
Reported 2024-02-23 12:14:25 PST
SSIA
Attachments
Andy Estes
Comment 1 2024-02-23 12:14:27 PST
Andy Estes
Comment 2 2024-02-23 12:15:54 PST
EWS
Comment 3 2024-02-24 15:48:28 PST
Committed 275288@main (d26e92fa4929): <https://commits.webkit.org/275288@main> Reviewed commits have been landed. Closing PR #25026 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.