[iOS] Element fullscreen window should not support pinch-to-dismiss https://bugs.webkit.org/show_bug.cgi?id=270001 rdar://122838328

Reviewed by Jer Noble.

For parity with AVPlayerViewController on iOS, remove support for dismissing the element fullscreen
window via pinch gesture. Pan dismissal remains supported.

* Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:
(-[WKFullScreenWindowController enterFullScreen:]):
(-[WKFullScreenWindowController interactionControllerForDismissal:]):
(-[WKFullScreenWindowController _interactiveDismissChanged:]):
(-[WKFullScreenWindowController _interactivePinchDismissChanged:]): Deleted.

Canonical link: https://commits.webkit.org/275288@main